Add /api/v1/certificates/mor_search_by_multi_params
