# app/controllers/api/v1/certificates_controller.rb
@@ -220,4 +220,27 @@ class Api::V1::CertificatesController < Api::V1::BaseApiController
     end
   end
 
+  def mor_search_by_multi_params
+    authorize :certificate, :index_m?
+
+    if params[:number].blank? || params[:date_of_issue].blank? || params[:name].blank? || params[:given_names].blank?
+      render status: :not_acceptable,
+             json: { error: "Brak parametru [:number] lub [:date_of_issue] lub [:name] lub [:given_names]" }
+    else
+      certificates = Certificate.joins(:customer).limit(params[:limit] ||= 10).offset(params[:offset] ||= 0)
+        .where(category: "M", number: params[:number], date_of_issue: params[:date_of_issue], customers: {name: params[:name], given_names: params[:given_names]})
+      if certificates.present?
+        render status: :ok,
+               json: certificates, meta: { collection:
+                               { offset: params[:offset] ||= 0,
+                                 limit: params[:limit] ||= 10,
+                                 objects: certificates.size } }
+      else
+        render status: :not_found,
+               json: { error: "Brak rekordów dla Certificate.where(category: 'M', number: '#{params[:number]}', , date_of_issue: '#{params[:date_of_issue]}') AND Customer.where(name: '#{params[:name]}', given_names: '#{params[:given_names]}')" }
+      end
+    end
+  end
+
+
 end
